--- a/src/components/Modal/index.scss
+++ b/src/components/Modal/index.scss
@@ -6,4 +6,9 @@
     &__container {
         padding: 25px;
     }
+
+    &__header {
+        display: flex;
+        justify-content: flex-end;
+    }
 }
