--- a/src/style/base.scss
+++ b/src/style/base.scss
@@ -18,3 +18,7 @@ html, body, #root, .h100p {
     font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
       monospace;
   }
+
+  a {
+    text-decoration: none;
+  }
