--- a/src/style/print.scss
+++ b/src/style/print.scss
@@ -12,7 +12,7 @@
             border: 1px solid black
         }
 
-        .row {
+        .table-row {
             height: 50px;
         }
     }
